--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -303,7 +303,7 @@ figure {
   right: 220px;
 }
 
-section + .post-extra {
+section+.post-extra {
   margin-top: 30px;
 }
 
@@ -324,8 +324,9 @@ section + .post-extra {
   position: relative;
   bottom: 8px;
 }
+
 /* Sidebar styles */
-.sidebar {
+/* .sidebar {
   position: relative;
   left: 800px;
 }
@@ -336,4 +337,40 @@ section + .post-extra {
 .sidebar-2 {
   border: 1px solid red;
   position: absolute;
+} */
+
+.sidebar {
+  width: 150px;
+  height: 800px;
+  background: yellow;
+  position: absolute;
+  left: 1000px;
+
+}
+
+.main-sidebar-boxes {
+  border-left: 1px solid #333;
+}
+
+.sidebar-box img {
+  width: 119px;
+  margin: 10px 0 0 10px;
+}
+
+.sidebar-caption {
+  padding: 0 10px;
+  font-size: 12.33px;
+  line-height: 15px;
+  margin-top: 5px;
+  width: 120px;
+}
+
+.sidebar-box a {
+  text-decoration: none;
+  text-transform: capitalize;
+  color: #333;
+}
+
+.sidebar-box a:hover {
+  text-decoration: underline;
 }
