--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -254,8 +254,7 @@ article h1 {
   font-size: 13px;
   color: #999;
   position: relative;
-  bottom: 45px;
-  left: 315px;
+  bottom: 12px;
 }
 
 .posts figure img {
@@ -303,7 +302,7 @@ figure {
   right: 220px;
 }
 
-section+.post-extra {
+section + .post-extra {
   margin-top: 30px;
 }
 
@@ -326,26 +325,18 @@ section+.post-extra {
 }
 
 /* Sidebar styles */
-/* .sidebar {
-  position: relative;
-  left: 800px;
+.main-sidebar-boxes-header {
+  font-size: 13px;
+  font-weight: 700;
+  font-family: Arial, Helvetica, sans-serif;
+  padding: 10px 0 0 10px;
 }
-.sidebar-1 {
-  border: 1px solid red;
-  position: absolute;
-}
-.sidebar-2 {
-  border: 1px solid red;
-  position: absolute;
-} */
-
 .sidebar {
   width: 150px;
   height: 800px;
-  background: yellow;
   position: absolute;
-  left: 1000px;
-
+  left: 1125px;
+  top: 1645px;
 }
 
 .main-sidebar-boxes {
@@ -373,4 +364,20 @@ section+.post-extra {
 
 .sidebar-box a:hover {
   text-decoration: underline;
+}
+
+section.sidebar-signup {
+  width: 100px;
+}
+
+.sidebar-signup-header {
+  font-size: 14px;
+  font-weight: 700;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.sidebar-signup p {
+  font-size: 12px;
+  color: rgb(102, 102, 102);
+  font-weight: 700;
 }
