--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -303,7 +303,7 @@ figure {
   right: 220px;
 }
 
-section + .post-extra {
+section+.post-extra {
   margin-top: 30px;
 }
 
@@ -404,9 +404,9 @@ section.sidebar-signup {
 /* Bottom other articles styles */
 
 .bottom-box {
-  width: 1200px;
+  width: 1220px;
   height: 800px;
-  margin: 0 auto;
+  margin-left: 100px;
   border: 1px solid blue;
   /* background: yellow; */
   position: relative;
@@ -415,12 +415,23 @@ section.sidebar-signup {
 
 .bottom-other-articles {
   width: 71%;
-  border: 1px solid orange;
-  /* background-color: orange; */
-  /* height: 500px;
-  float: left;
-  margin-right: 44px; */
-  margin-bottom: 150px;
+
+}
+
+.bottom-box header {
+  font-size: 15.5px;
+  margin-bottom: 20px;
+  padding-top: 20px;
+}
+
+.bottom-box header a {
+  color: #000;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+.bottom-box header a:hover {
+  text-decoration: underline;
 }
 
 .bottom-sidebar {
@@ -433,11 +444,10 @@ section.sidebar-signup {
 .bottom-articles {
   height: 200px;
   width: 272px;
-  /* border: 1px solid red; */
-  /* background-color: blue; */
   float: left;
   display: block;
-  margin-bottom: 100px;
+  margin-bottom: 60px;
+  margin-right: 15px;
 }
 
 #second-bottom-box {
@@ -483,5 +493,6 @@ section.sidebar-signup {
 
 #blank-content {
   width: 270px;
-  height: 180px;
+  height: 250px;
+  /* border: 1px solid green; */
 }
