--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -34,8 +34,7 @@ header.header {
   width: 200px;
 }
 
-.nav-brand img,
-.main-footer img {
+.nav-brand img {
   /* width: 200px; */
   height: 28px;
   margin: 0 30vw;
@@ -304,7 +303,7 @@ figure {
   right: 220px;
 }
 
-section+.post-extra {
+section + .post-extra {
   margin-top: 30px;
 }
 
@@ -538,19 +537,29 @@ section.editors-pick {
 .main-footer {
   position: relative;
   top: 7855px;
+  width: 87%;
+  margin: 0 auto;
 }
-
-.main-footer div {
-  position: relative;
-  right: 310px;
+.main-footer img {
+  width: 200px;
+  float: left;
+  display: block;
+}
+.main-footer > header {
+  /* position: relative;
+  right: 310px; */
+  clear: both;
+  height: 35px;
 }
 
 .footer-small {
   display: inline-block;
-  position: relative;
+  /* position: relative;
   left: 450px;
-  bottom: 10px;
+  bottom: 10px; */
   font-size: 11px;
+  float: right;
+  margin-right: 105px;
 }
 
 .footer-small a {
@@ -559,13 +568,14 @@ section.editors-pick {
 }
 
 .footer-body {
-  position: relative;
-  top: 20px;
+  /* position: relative;
+  top: 20px; */
+  margin-top: 18px;
 }
 
 .footer-links {
-  position: relative;
-  left: 100px;
+  /* position: relative;
+  left: 100px; */
 }
 
 .article-categories {
@@ -573,13 +583,45 @@ section.editors-pick {
   height: 315px;
   border: 1px solid blue;
   float: left;
+  margin-right: 15px;
 }
-
+.article-categories > header {
+  color: rgb(51, 51, 51);
+  font-size: 13px;
+  font-weight: 700;
+  font-family: Arial, Helvetica, sans-serif;
+  height: 25px;
+  line-height: 15px;
+  text-transform: uppercase;
+  width: 150px;
+  margin: 0px;
+}
+.footer-topics a {
+  color: rgb(0, 0, 0);
+  display: inline-block;
+  font-family: "Times New Roman", Times, serif;
+  text-transform: capitalize;
+  width: 150px;
+  font-size: 14px;
+  font-weight: 500;
+  height: 23px;
+  line-height: 16px;
+  text-decoration: none;
+}
+.footer-topics a:hover {
+  text-decoration: underline;
+}
+/*
+{
+      
+}
+*/
 .main-footer aside {
   width: 215px;
   height: 315px;
   border: 1px solid green;
   float: left;
-  position: relative;
-  left: 100px;
+  /* position: relative;
+  left: 100px; */
+  margin-left: 15px;
 }
