--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -303,7 +303,7 @@ figure {
   right: 220px;
 }
 
-section + .post-extra {
+section+.post-extra {
   margin-top: 30px;
 }
 
@@ -409,7 +409,7 @@ section.sidebar-signup {
   margin-left: 100px;
   position: relative;
   top: 7900px;
-  border-bottom: 1px solid #121;
+  /* border-bottom: 1px solid #121; */
 }
 
 .bottom-other-articles {
@@ -514,9 +514,6 @@ section.editors-pick {
   border-top: 1px solid #121;
 }
 
-/* ul.bottom-sidebar-articles {
-  margin-top: -20px;
-} */
 .bottom-box ul li {
   padding: 15px 0;
   border-bottom: 1px solid #e2e2e2;
@@ -539,13 +536,16 @@ section.editors-pick {
   top: 7855px;
   width: 87%;
   margin: 0 auto;
+  border-top: 1px solid #121;
 }
+
 .main-footer img {
   width: 200px;
   float: left;
   display: block;
 }
-.main-footer > header {
+
+.main-footer>header {
   clear: both;
   height: 35px;
 }
@@ -571,9 +571,11 @@ section.editors-pick {
   /* height: 315px; */
   /* border: 1px solid blue; */
   float: left;
-  margin-right: 15px;
+  /* margin-right: 15px; */
 }
-.article-categories > header {
+
+.article-categories>header,
+.footer-body-menus-left header {
   color: rgb(51, 51, 51);
   font-size: 13px;
   font-weight: 700;
@@ -584,6 +586,7 @@ section.editors-pick {
   width: 150px;
   margin: 0px;
 }
+
 .footer-topics a {
   color: rgb(0, 0, 0);
   display: inline-block;
@@ -596,9 +599,11 @@ section.editors-pick {
   line-height: 16px;
   text-decoration: none;
 }
+
 .footer-topics a:hover {
   text-decoration: underline;
 }
+
 .footer-body-menus-left {
   width: 215px;
   height: 315px;
@@ -607,4 +612,21 @@ section.editors-pick {
   margin-left: 15px;
   padding-left: 15px;
   border-left: 1px solid rgb(226, 226, 226);
+}
+
+.icon-list-item {
+  margin-bottom: 10px;
+  margin-top: 5px;
+}
+
+.icon-list-item a {
+  text-decoration: none;
+  color: #000;
+  font-size: 15px;
+  font-weight: 700;
+  line-height: 18px;
+}
+
+.icon-list-item a:hover {
+  text-decoration: underline;
 }
