--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -615,8 +615,7 @@ section.editors-pick {
 }
 
 .icon-list-item {
-  margin-bottom: 10px;
-  margin-top: 5px;
+  margin: 5px 0 10px 0;
 }
 
 .icon-list-item a {
@@ -629,4 +628,30 @@ section.editors-pick {
 
 .icon-list-item a:hover {
   text-decoration: underline;
+  cursor: pointer;
+}
+.footer-body-menus-left .small-menu {
+  margin-top: 30px;
+}
+
+.footer-body-menus-left .small-menu a {
+  color: rgb(0, 0, 0);
+  display: inline-block;
+  font-family: "Times New Roman", Times, serif;
+  text-transform: capitalize;
+  width: 150px;
+  font-size: 11px;
+  font-weight: 500;
+  height: 23px;
+  line-height: 21px;
+  text-decoration: none;
+}
+
+.footer-body-menus-left .small-menu a:hover {
+  text-decoration: underline;
+  cursor: pointer;
+}
+.footer-body-menus-left .small-menu li:nth-child(3) {
+  border-bottom: 1px solid rgb(226, 226, 226);
+  margin-bottom: 15px;
 }
